<resources>
    <string name="app_name">Fresh Daily</string>

    <string name="Login">Login</string>
    <string name="login">Mobile Number 10-digit</string>
    <string name="button">Continue</string>
    <string name="sequre">Login Sequrely</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fresh Daily</string>
    <string name="nav_header_subtitle">freshdaily1920@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="otp">Enter OTP</string>
    <string name="menu_account">My Account</string>
    <string name="menu_subscription">My Subscriptions</string>
    <string name="menu_Category">Shop By Category</string>
    <string name="menu_rate">Rate our app</string>
    <string name="terms" formatted="false">Legal, Terms &amp; Conditions</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_dash_bord">FreshDaily</string>
    <string name="customer"><b>Customer</b></string>
    <string name="menu_home">My Account</string>
    <string name="menu_gallery">MySubscription</string>
    <string name="menu_slideshow">Shop By Category</string>
    <string name="menu_send">Notification</string>
    <string name="menu_tools">Rate our app</string>
    <string name="menu_help">Need Help</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="searchbox">Search 2000+ product</string>
    <string name="number">7567776802</string>
    <string name="mail">Enail not found</string>
    <string name="edit">EDIT</string>
    <string name="address">B/103,Hirabag,Surat</string>
    <string name="orders">My Orders</string>
    <string name="taping">By tapping continue,</string>
    <string name="ternandcondition"><u>I agree terms and conditions</u></string>
    <string name="wallets">My Wallet</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="ask">Frequently asked questions</string>
    <string name="id">Email</string>
    <string name="mobile">7567776802</string>
    <string name="privacy">Privacy policy</string>
    <string name="save">save changes</string>
    <string name="termscondition">These terms and conditions ("Terms", "Agreement") are an agreement between Mobile Application Developer ("Mobile Application Developer", "us", "we" or "our") and you ("User", "you" or "your"). This Agreement sets forth the general terms and conditions of your use of the Fresh Daily mobile application and any of its products or services (collectively, "Mobile Application" or "Services").<b>Accounts and membership : </b>If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may monitor and review new accounts before you may sign in and use our Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further registration.<b>Backups : </b>We are not responsible for Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available.<b>Links to other mobile applications : </b>Although this Mobile Application may link to other mobile applications, we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked mobile application, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their mobile applications. We do not assume any responsibility or liability for the actions, products, services, and content of any other third-parties. You should carefully review the legal statements and other conditions of use of any mobile application which you access through a link from this Mobile Application. Your linking to any other off-site mobile applications is at your own risk.<b>Prohibited uses : </b>In addition to other terms as set forth in the Agreement, you are prohibited from using the Mobile Application or its Content: (a) for any unlawful purpose; (b) to solicit others to perform or participate in any unlawful acts; (c) to violate any international, federal, provincial or state regulations, rules, laws, or local ordinances; (d) to infringe upon or violate our intellectual property rights or the intellectual property rights of others; (e) to harass, abuse, insult, harm, defame, slander, disparage, intimidate, or discriminate based on gender, sexual orientation, religion, ethnicity, race, age, national origin, or disability; (f) to submit false or misleading information; (g) to upload or transmit viruses or any other type of malicious code that will or may be used in any way that will affect the functionality or operation of the Service or of any related mobile application, other mobile applications, or the Internet; (h) to collect or track the personal information of others; (i) to spam, phish, pharm, pretext, spider, crawl, or scrape; (j) for any obscene or immoral purpose; or (k) to interfere with or circumvent the security features of the Service or any related mobile application, other mobile applications, or the Internet. We reserve the right to terminate your use of the Service or any related mobile application for violating any of the prohibited uses.<b>Intellectual property rights : </b>This Agreement does not transfer to you any intellectual property owned by Mobile Application Developer or third-parties, and all rights, titles, and interests in and to such property will remain (as between the parties) solely with Mobile Application Developer. All trademarks, service marks, graphics and logos used in connection with our Mobile Application or Services, are trademarks or registered trademarks of Mobile Application Developer or Mobile Application Developer licensors. Other trademarks, service marks, graphics and logos used in connection with our Mobile Application or Services may be the trademarks of other third-parties. Your use of our Mobile Application and Services grants you no right or license to reproduce or otherwise use any Mobile Application Developer or third-party trademarks.</string>
    <string name="a1">Address line 1</string>
    <string name="a2">Address line 2</string>
    <string name="lan">Landmark</string>
    <string name="pin">Pinocde (Optional)</string>
    <string name="hello_bank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">cart</string>

</resources>
