<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardfragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/xyz"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_needhelp"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/menu_logout" />


    </group>





</menu>
