<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashboardfragment">

    <fragment
        android:id="@+id/dashboardfragment"
        android:name="com.example.freshdaily.ui.dashboard.mydashboard"
        android:label="Fresh Daily"
        tools:layout="@layout/fragment_maindashboard" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.freshdaily.ui.MyAccount.MyAccountFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.freshdaily.ui.MySubscription.MySubscriptionFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mysubscription" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.freshdaily.ui.ShopByCategory.ShopByCategoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_shopbycategory" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.freshdaily.ui.Notification.NotificationFragment"
        android:label="Vacation"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.freshdaily.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_rateourapp" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.freshdaily.ui.Logout.RateOurAppFragment"
        android:label="Rate our App"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/xyz"
        android:name="com.example.freshdaily.ui.RateOurApp1.ShopByCategoryFragment"
        android:label="Rate our app"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_needhelp"
        android:name="com.example.freshdaily.ui.NeedHelp.NeedHelpFragment"
        android:label="Need Help"
        tools:layout="@layout/fragment_needhelp" />
</navigation>