<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#EEF2F5">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/CyanP"
        android:gravity="center"
        android:paddingStart="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="@dimen/_10sdp"
                android:id="@+id/head1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="My Account"
                android:layout_marginHorizontal="@dimen/_100sdp"
                android:gravity="center"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"/>
        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cd"
                android:text="Customer Details"
                android:textColor="@color/Black"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="@dimen/_20ssp"
                android:layout_marginVertical="@dimen/_12ssp"
                android:layout_marginHorizontal="@dimen/_15sdp"></TextView>


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:id="@+id/first"
                android:layout_below="@+id/cd"
                android:drawableTint="@color/CyanP"
                android:textCursorDrawable="@drawable/cursor"
                android:backgroundTint="@color/CyanP"
                android:textSize="@dimen/_15ssp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColorHint="@color/Gray"
                android:hint="@string/firstname"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/noto_sans_bold">

            </EditText>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Gray"
                android:textSize="@dimen/_15ssp"
                android:id="@+id/last"
                android:layout_below="@+id/cd"
                android:drawableTint="@color/CyanP"
                android:textCursorDrawable="@drawable/cursor"
                android:backgroundTint="@color/CyanP"
                android:layout_toEndOf="@+id/first"
                android:hint="@string/lastname"
                android:textAlignment="viewStart"
                android:layout_marginLeft="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/noto_sans_bold"
                android:layout_weight="1"></EditText>





            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/Gray"
                android:id="@+id/emailid"
                android:hint="@string/id"
                android:textSize="@dimen/_15ssp"
                android:layout_below="@+id/first"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:drawableTint="@color/CyanP"
                android:textCursorDrawable="@drawable/cursor"
                android:backgroundTint="@color/CyanP"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:fontFamily="@font/noto_sans_bold"
                android:layout_weight="1"></EditText>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t"
                android:text="Mobile"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:textColor="@color/Gray"
                android:layout_below="@+id/emailid"></TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:textSize="@dimen/_15ssp"
                android:layout_below="@+id/t"
                android:text="@string/mobile"
                android:textColor="@color/Black"
                android:fontFamily="@font/noto_sans_bold"
                android:layout_marginHorizontal="@dimen/_20sdp">

            </TextView>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/mobile"
                android:layout_marginHorizontal="@dimen/_70sdp"
                android:layout_marginVertical="@dimen/_40sdp"
                android:background="@drawable/button"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/save"
                android:textColor="@color/WhiteSmoke"></Button>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
