<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#EEF2F5">



    <RelativeLayout
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:cardCornerRadius="@dimen/_6sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/customername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/customer"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/_15ssp"
                        android:fontFamily="@font/noto_sans_bold"
                        ></TextView>

                    <TextView
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/noto_sans"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:text="@string/number"></TextView>

                    <TextView
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/Black"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/mail"></TextView>

                </LinearLayout>

                <Button
                    android:layout_margin="@dimen/_15sdp"
                    android:id="@+id/EDIT"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button2"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/noto_sans_bold"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:hint="@string/edit"
                    android:textColorHint="@color/CyanP"
                    android:textStyle="bold" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_below="@+id/card1"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:cardCornerRadius="@dimen/_6sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/_15ssp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:text="Delivery Address"></TextView>

                    <TextView
                        android:id="@+id/Address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:text="@string/address"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/_10sdp"></TextView>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:layout_marginVertical="@dimen/_25sdp"
                        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                        ></TextView>

                </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_below="@+id/card2"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:cardCornerRadius="@dimen/_6sdp">


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:drawablePadding="10dp"
                        android:id="@+id/subscription"
                        android:background="@drawable/button1"
                        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:drawableLeft="@drawable/ic_event_available_black_24dp"
                        android:text="@string/menu_subscription"
                        android:fontFamily="@font/noto_sans"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/Black"
                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_12sdp"
                        android:textAllCaps="false"
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_width="match_parent"
                        android:drawablePadding="10dp"
                        android:id="@+id/order"
                        android:background="@drawable/button1"
                        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:drawableLeft="@drawable/ic_assignment_black_24dp"
                        android:text="@string/orders"
                        android:fontFamily="@font/noto_sans"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/Black"
                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_12sdp"
                        android:textAllCaps="false"
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:layout_width="match_parent"
                        android:drawablePadding="10dp"
                        android:id="@+id/wallet"
                        android:background="@drawable/button1"
                        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                        android:drawableLeft="@drawable/ic_account_balance_wallet_black_24dp"
                        android:text="@string/wallets"
                        android:fontFamily="@font/noto_sans"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/Black"

                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_12sdp"
                        android:textAllCaps="false"
                        android:gravity="center_vertical"
                        android:layout_height="wrap_content">
                    </Button>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_below="@+id/card3"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                app:cardCornerRadius="@dimen/_6sdp">


                <TextView
                    android:layout_width="match_parent"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:id="@+id/ring"
                    android:background="@drawable/button1"
                    android:drawableLeft="@drawable/ic_notifications_active_black_24dp"
                    android:text="Ring The Bell"
                    android:fontFamily="@font/noto_sans"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/Black"
                    android:paddingLeft="@dimen/_12sdp"
                    android:paddingRight="@dimen/_12sdp"
                    android:textAllCaps="false"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                </TextView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end">
                <Switch
                    android:id="@+id/switch_one"
                    android:layout_marginTop="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    />
            </RelativeLayout>

            </androidx.cardview.widget.CardView>




        </RelativeLayout>

    </RelativeLayout>

    </LinearLayout>